Fix cookie close icon overflow and modal content haight in mobile version

--- a/styles/resize.css
+++ b/styles/resize.css
@@ -179,6 +179,10 @@
   }
 
     /* ------- MODAL ------ */
+    #expansion-container {
+      height: 97.5vh;
+    }
+
     #modal-close-container {
       padding: 1.5rem 0.75rem;
     }
